--- a/public/404.html
+++ b/public/404.html
@@ -8,13 +8,13 @@
 <meta name="theme-color" content="#FFFFFF"><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://verbose-lamp.netlify.app/404.html" />
+<meta property="og:url" content="/404.html" />
 
 <title>404 Page not found | Look &amp; Point</title>
 <link rel="manifest" href="/manifest.json">
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.2bc2364a4a4b31f0ec1debecf0a8f90a840821f143dfe1ac6a0f7cbcbdcf64ac.css" integrity="sha256-K8I2SkpLMfDsHevs8Kj5CoQIIfFD3&#43;Gsag98vL3PZKw=">
-<script defer src="/en.search.min.302b0d057a3a06359fc16603d3fc9fedcba21306de73834941ad19de69f13680.js" integrity="sha256-MCsNBXo6BjWfwWYD0/yf7cuiEwbec4NJQa0Z3mnxNoA="></script>
+<script defer src="/en.search.min.a815886b6a33b5395a633f85b0dcc930b54aae7ebafcea13f1f72379624747b2.js" integrity="sha256-qBWIa2oztTlaYz&#43;FsNzJMLVKrn66/OoT8fcjeWJHR7I="></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
